--- a/index.html
+++ b/index.html
@@ -36,51 +36,69 @@
         @media print {
           @page { 
             size: A4 landscape; 
-            margin: 10mm; 
+            margin: 8mm; 
           }
 
-          body * {
-            visibility: hidden;
-          }
-
-          #root, .print-report-area, .print-report-area * {
-            visibility: visible;
-          }
-
-          .print-report-area {
-            position: absolute;
-            left: 0;
-            top: 0;
-            width: 100%;
-            display: block !important;
+          /* Reset radical para ocupação total da largura */
+          html, body {
+            width: 100% !important;
+            margin: 0 !important;
+            padding: 0 !important;
             background: white !important;
-            color: black !important;
+            overflow: visible !important;
+          }
+
+          #root {
+            display: block !important;
+            width: 100% !important;
+            margin: 0 !important;
+            padding: 0 !important;
+          }
+
+          /* Garante que o container flex da App não esprema o conteúdo */
+          main, .flex, .flex-1 {
+            display: block !important;
+            width: 100% !important;
+            margin: 0 !important;
+            padding: 0 !important;
+            max-width: none !important;
           }
 
           .no-print {
             display: none !important;
           }
 
-          table {
-            page-break-inside: auto;
-            border-collapse: collapse !important;
+          .print-report-area {
+            display: block !important;
             width: 100% !important;
+            max-width: none !important;
+            position: relative !important;
+            left: 0 !important;
+            top: 0 !important;
+            margin: 0 !important;
+            padding: 0 !important;
+            visibility: visible !important;
+          }
+
+          table {
+            width: 100% !important;
+            table-layout: auto !important;
+            page-break-inside: auto;
           }
           
           tr { 
             page-break-inside: avoid !important; 
-            page-break-after: auto !important; 
           }
           
           thead { display: table-header-group !important; }
 
-          /* Integridade dos blocos de rodapé */
           .no-break {
             page-break-inside: avoid !important;
             break-inside: avoid !important;
           }
         }
 
+        /* Oculta a área de impressão na tela normal */
         .print-report-area {
           display: none;
         }
