--- a/index.html
+++ b/index.html
@@ -36,12 +36,22 @@
         @media print {
           @page { 
             size: A4 landscape; 
-            margin: 8mm; 
+            margin: 5mm !important; 
           }
 
-          /* Reset radical para ocupação total da largura */
+          /* Oculta tudo que não for o relatório */
+          body * {
+            visibility: hidden !important;
+          }
+
+          #root, .print-report-area, .print-report-area * {
+            visibility: visible !important;
+          }
+
+          /* Reseta o fluxo do documento para o modo print */
           html, body {
-            width: 100% !important;
+            width: 297mm !important; /* Largura A4 paisagem */
+            height: auto !important;
             margin: 0 !important;
             padding: 0 !important;
             background: white !important;
@@ -49,45 +59,51 @@
           }
 
           #root {
-            display: block !important;
+            position: absolute !important;
+            left: 0 !important;
+            top: 0 !important;
             width: 100% !important;
             margin: 0 !important;
             padding: 0 !important;
+            display: block !important;
           }
 
-          /* Garante que o container flex da App não esprema o conteúdo */
-          main, .flex, .flex-1 {
+          main, .flex, .flex-1, div {
             display: block !important;
+            float: none !important;
             width: 100% !important;
+            max-width: none !important;
             margin: 0 !important;
             padding: 0 !important;
-            max-width: none !important;
+            box-shadow: none !important;
+            border-radius: 0 !important;
           }
 
           .no-print {
             display: none !important;
+            height: 0 !important;
+            width: 0 !important;
+            margin: 0 !important;
+            padding: 0 !important;
           }
 
           .print-report-area {
             display: block !important;
+            position: static !important;
             width: 100% !important;
-            max-width: none !important;
-            position: relative !important;
-            left: 0 !important;
-            top: 0 !important;
-            margin: 0 !important;
-            padding: 0 !important;
-            visibility: visible !important;
+            padding: 2mm !important;
           }
 
           table {
             width: 100% !important;
+            border-collapse: collapse !important;
             table-layout: auto !important;
             page-break-inside: auto;
           }
           
           tr { 
             page-break-inside: avoid !important; 
+            page-break-after: auto !important;
           }
           
           thead { display: table-header-group !important; }
@@ -95,10 +111,10 @@
           .no-break {
             page-break-inside: avoid !important;
             break-inside: avoid !important;
+            display: block !important;
           }
         }
 
-        /* Oculta a área de impressão na tela normal */
         .print-report-area {
           display: none;
         }
