--- a/index.html
+++ b/index.html
@@ -39,82 +39,53 @@
             margin: 5mm !important; 
           }
 
-          /* Oculta tudo que não for o relatório */
-          body * {
-            visibility: hidden !important;
-          }
-
-          #root, .print-report-area, .print-report-area * {
-            visibility: visible !important;
-          }
-
-          /* Reseta o fluxo do documento para o modo print */
+          /* Reset Radical de Container */
           html, body {
-            width: 297mm !important; /* Largura A4 paisagem */
+            width: 100% !important;
             height: auto !important;
             margin: 0 !important;
             padding: 0 !important;
             background: white !important;
-            overflow: visible !important;
           }
 
           #root {
-            position: absolute !important;
-            left: 0 !important;
-            top: 0 !important;
+            display: block !important;
             width: 100% !important;
             margin: 0 !important;
             padding: 0 !important;
-            display: block !important;
           }
 
-          main, .flex, .flex-1, div {
+          /* Neutraliza os containers do Tailwind na App */
+          main, .flex, .flex-1, .h-screen {
             display: block !important;
-            float: none !important;
             width: 100% !important;
+            height: auto !important;
             max-width: none !important;
             margin: 0 !important;
             padding: 0 !important;
-            box-shadow: none !important;
-            border-radius: 0 !important;
+            overflow: visible !important;
+            position: static !important;
           }
 
           .no-print {
             display: none !important;
-            height: 0 !important;
-            width: 0 !important;
-            margin: 0 !important;
-            padding: 0 !important;
           }
 
           .print-report-area {
             display: block !important;
-            position: static !important;
+            visibility: visible !important;
             width: 100% !important;
-            padding: 2mm !important;
+            margin: 0 !important;
+            padding: 0 !important;
           }
 
           table {
             width: 100% !important;
-            border-collapse: collapse !important;
             table-layout: auto !important;
-            page-break-inside: auto;
-          }
-          
-          tr { 
-            page-break-inside: avoid !important; 
-            page-break-after: auto !important;
-          }
-          
-          thead { display: table-header-group !important; }
-
-          .no-break {
-            page-break-inside: avoid !important;
-            break-inside: avoid !important;
-            display: block !important;
           }
         }
 
+        /* Oculta o relatório na tela do navegador */
         .print-report-area {
           display: none;
         }
