--- a/index.html
+++ b/index.html
@@ -36,56 +36,48 @@
         @media print {
           @page { 
             size: A4 landscape; 
-            margin: 5mm !important; 
+            margin: 0 !important; 
           }
 
-          /* Reset Radical de Container */
+          /* Reset total do DOM para focar apenas no relatório */
           html, body {
-            width: 100% !important;
-            height: auto !important;
+            width: 297mm !important;
+            height: 210mm !important;
             margin: 0 !important;
             padding: 0 !important;
-            background: white !important;
+            background: #fff !important;
+            overflow: visible !important;
           }
 
           #root {
-            display: block !important;
-            width: 100% !important;
-            margin: 0 !important;
-            padding: 0 !important;
-          }
-
-          /* Neutraliza os containers do Tailwind na App */
-          main, .flex, .flex-1, .h-screen {
-            display: block !important;
-            width: 100% !important;
-            height: auto !important;
-            max-width: none !important;
-            margin: 0 !important;
-            padding: 0 !important;
-            overflow: visible !important;
-            position: static !important;
-          }
-
-          .no-print {
-            display: none !important;
+            display: none !important; /* Esconde a App inteira */
           }
 
           .print-report-area {
             display: block !important;
             visibility: visible !important;
-            width: 100% !important;
-            margin: 0 !important;
-            padding: 0 !important;
+            width: 297mm !important;
+            min-height: 210mm !important;
+            position: absolute !important;
+            left: 0 !important;
+            top: 0 !important;
+            padding: 10mm !important;
+            background: white !important;
+            box-sizing: border-box !important;
           }
 
           table {
             width: 100% !important;
-            table-layout: auto !important;
+            border-collapse: collapse !important;
+            table-layout: fixed !important;
+          }
+
+          .no-print {
+            display: none !important;
           }
         }
 
-        /* Oculta o relatório na tela do navegador */
+        /* Oculta na tela de edição */
         .print-report-area {
           display: none;
         }
