--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -23,7 +22,7 @@
       }
     </script>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Roboto:wght@300;400;500;700;900&family=JetBrains+Mono:wght@400;700;800&family=Merriweather:wght@300;400;700;900&display=swap');
         
         body { 
           font-family: 'Inter', sans-serif; 
@@ -37,48 +36,42 @@
         @media print {
           @page { 
             size: A4 landscape; 
-            margin: 10mm; 
+            margin: 0 !important; 
           }
 
-          /* TÉCNICA DE ISOLAMENTO: Esconde tudo, mostra apenas o report */
-          body * {
-            visibility: hidden;
+          /* Reset de containers: anula h-screen e backgrounds do modo web */
+          html, body, #root, #root > div, main {
+            background: white !important;
+            background-color: white !important;
+            color: black !important;
+            height: auto !important;
+            min-height: 0 !important;
+            margin: 0 !important;
+            padding: 0 !important;
+            overflow: visible !important;
           }
 
-          #root, .print-report-area, .print-report-area * {
-            visibility: visible;
+          /* Oculta interface do sistema */
+          aside, nav, header.no-print, .no-print, button {
+            display: none !important;
+          }
+
+          /* Garante que o container do App não herde classes de layout da web */
+          #root > div {
+            display: block !important;
+            height: auto !important;
+            background: white !important;
           }
 
           .print-report-area {
-            position: absolute;
-            left: 0;
-            top: 0;
-            width: 100%;
             display: block !important;
+            visibility: visible !important;
+            width: 297mm !important;
             background: white !important;
-            color: black !important;
+            padding: 10mm !important;
+            box-sizing: border-box !important;
+            position: relative !important;
           }
-
-          /* Remove elementos de UI que podem vazar via visibilidade herdada */
-          aside, nav, header, button, .no-print {
-            display: none !important;
-            height: 0 !important;
-            overflow: hidden !important;
-          }
-
-          /* Força o layout da tabela */
-          table {
-            page-break-inside: auto;
-            border-collapse: collapse !important;
-            width: 100% !important;
-          }
-          thead { display: table-header-group !important; }
-          tr { page-break-inside: avoid !important; page-break-after: auto !important; }
-          
-          /* Estética do PDF */
-          .bg-slate-900 { background-color: #0f172a !important; color: white !important; }
-          .bg-slate-50 { background-color: #f8fafc !important; }
-          .border-black { border-color: #000000 !important; }
         }
 
         .print-report-area {
