--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -40,17 +39,10 @@
             margin: 0 !important; 
           }
 
-          /* Reset universal: NADA deve ter fundo escuro ou altura fixa ao imprimir */
-          * {
-            -webkit-print-color-adjust: exact !important;
-            print-color-adjust: exact !important;
-            background-color: transparent !important;
-            background-image: none !important;
-            box-shadow: none !important;
-          }
-
+          /* Reset de Layout: Impede vazamento de cores e alturas fixas */
           html, body {
             background-color: white !important;
+            color: black !important;
             height: auto !important;
             min-height: 0 !important;
             margin: 0 !important;
@@ -60,20 +52,20 @@
 
           #root, #root > div, main {
             background-color: white !important;
-            display: block !important;
+            background: white !important;
             height: auto !important;
             min-height: 0 !important;
+            margin: 0 !important;
+            padding: 0 !important;
+            display: block !important;
             overflow: visible !important;
             position: static !important;
           }
 
-          /* Oculta interface do sistema com prioridade máxima */
-          aside, nav, header, footer, .no-print, button, .lucide {
+          /* Oculta interface do sistema */
+          aside, nav, header.no-print, .no-print, button, .lucide {
             display: none !important;
-            height: 0 !important;
-            width: 0 !important;
             visibility: hidden !important;
-            position: absolute !important;
           }
 
           .print-report-area {
@@ -84,8 +76,9 @@
             padding: 10mm !important;
             box-sizing: border-box !important;
             position: relative !important;
-            z-index: 9999 !important;
             margin: 0 !important;
+            height: auto !important;
+            min-height: 0 !important;
           }
         }
 
