--- a/index.html
+++ b/index.html
@@ -97,10 +97,13 @@
     "lucide-react": "https://esm.sh/lucide-react@0.460.0?external=react,react-dom",
     "xlsx": "https://esm.sh/xlsx@0.18.5",
     "zod": "https://esm.sh/zod@3.23.8",
-    "@hello-pangea/dnd": "https://esm.sh/@hello-pangea/dnd@17.0.0?external=react,react-dom"
+    "@hello-pangea/dnd": "https://esm.sh/@hello-pangea/dnd@17.0.0?external=react,react-dom",
+    "vite": "https://esm.sh/vite@^7.3.1",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
+<link rel="stylesheet" href="/index.css">
 </head>
 <body class="bg-slate-50 dark:bg-slate-950 text-slate-900 dark:text-slate-100">
     <div id="root"></div>
