--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         theme: {
           extend: {
             fontFamily: {
-              sans: ['Inter', 'system-ui', 'sans-serif'],
+              sans: ['Space Grotesk', 'sans-serif'],
+              display: ['Space Grotesk', 'sans-serif'],
             },
             borderRadius: {
               '3xl': '1.5rem',
@@ -23,10 +24,10 @@
       }
     </script>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Roboto:wght@300;400;500;700;900&family=JetBrains+Mono:wght@400;700;800&family=Merriweather:wght@300;400;700;900&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;700;800&family=Merriweather:wght@300;400;700;900&display=swap');
         
         body { 
-          font-family: 'Inter', sans-serif; 
+          font-family: 'Space Grotesk', sans-serif; 
           background-color: #f8fafc;
           /* Compatibilidade de cores global */
           -webkit-print-color-adjust: exact !important;
@@ -100,6 +101,7 @@
     "react/": "https://esm.sh/react@18.3.1/",
     "react-dom": "https://esm.sh/react-dom@18.3.1",
     "react-dom/": "https://esm.sh/react-dom@18.3.1/",
+    "react-router-dom": "https://esm.sh/react-router-dom@6.26.2?external=react,react-dom",
     "react-dom/client": "https://esm.sh/react-dom@18.3.1/client",
     "lucide-react": "https://esm.sh/lucide-react@0.460.0?external=react,react-dom",
     "xlsx": "https://esm.sh/xlsx@0.18.5",
