--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         theme: {
           extend: {
             fontFamily: {
-              sans: ['Space Grotesk', 'sans-serif'],
-              display: ['Space Grotesk', 'sans-serif'],
+              sans: ['Inter', 'sans-serif'],
+              display: ['Inter', 'sans-serif'],
             },
             borderRadius: {
               '3xl': '1.5rem',
@@ -24,10 +24,10 @@
       }
     </script>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;700;800&family=Merriweather:wght@300;400;700;900&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=JetBrains+Mono:wght@400;700;800&family=Merriweather:wght@300;400;700;900&display=swap');
         
         body { 
-          font-family: 'Space Grotesk', sans-serif; 
+          font-family: 'Inter', sans-serif; 
           background-color: #f8fafc;
           /* Compatibilidade de cores global */
           -webkit-print-color-adjust: exact !important;
